--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@next-tools/dynamic": "^0.0.11",
     "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "mongoose": "^5.13.2",
