--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.4",
     "@next-tools/dynamic": "^0.0.11",
     "axios": "^0.21.4",
@@ -18,8 +20,10 @@
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
+    "notistack": "^2.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.43.0"
   },
   "devDependencies": {
     "eslint": "7.29.0",
