--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-tools/dynamic": "^0.0.11",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.2.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.2",
@@ -22,6 +23,7 @@
     "next-connect": "^0.10.1",
     "notistack": "^2.0.8",
     "react": "17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.43.0"
   },
