--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
+    "cloudinary": "^1.34.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.5-lts.1",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
     "notistack": "^2.0.8",
     "react": "17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.43.0"
+    "react-hook-form": "^7.43.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "7.29.0",
